kubernetes/seerr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: seerr
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: seerr
      app.kubernetes.io/name: seerr
      app.kubernetes.io/instance: seerr
  template:
    metadata:
      labels:
        app: seerr
        app.kubernetes.io/name: seerr
        app.kubernetes.io/instance: seerr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: seerr
        image: ghcr.io/seerr-team/seerr:v3.5.0@sha256:27602401178d54f1964442287b9f23f67a3fa2252645ee8065839ea1c3f69e45
        ports:
        - containerPort: 5055
        volumeMounts:
        - mountPath: /app/config
          name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: seerr-config
