kubernetes/seerr/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: seerr
  labels:
    app: seerr

spec:
  ports:
  - port: 5055
    targetPort: 5055
    protocol: TCP
    name: http
  selector:
    app: seerr
