kubernetes/seerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: seerr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Seerr
    gethomepage.dev/description: Request Manager
    gethomepage.dev/group: Media
    gethomepage.dev/icon: seerr.png

spec:
  tls:
  - hosts:
    - seerr.k.oneill.net
    secretName: seerr-tls
  rules:
  - host: seerr.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seerr
            port:
              number: 5055
